//
//Copyright 2018 The Kubernetes Authors.
//
//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.
//

syntax = "proto3";

package thalescpl.io.ekms.istio.v0;

option go_package = "github.com/thalescpl-io/k8s-kms-plugin/apis/istio/v0;istio";

import "google/protobuf/timestamp.proto";
import "protoc-gen-swagger/options/annotations.proto";

message VersionRequest {
  // Version of the KMS plugin API.
  string version = 1;
}

message VersionResponse {
  // Version of the KMS plugin API.
  string version = 1;
  // Name of the KMS provider.
  string runtime_name = 2;
  // Version of the KMS provider. The string must be semver-compatible.
  string runtime_version = 3;
}

message GenerateDEKRequest {
  // key size in bits
  int64 size = 1;
}

message GenerateDEKResponse {
  // Encrypted key blob
  bytes encrypted_key_blob = 1;

}

